# RecommenderSystem

./: .gitignore  CMakeLists.txt  README.md  create_so.cpp  main.cpp
data/: Book-Ratings-test.csv
include/: CollaborativeFiltering.h
output/experiment_results/: recommend-items-for-user8_item-based_k-1_simi0.txt  recommend-items-for-user8_user-based_k-1_simi0.txt  test-rmse_item-based_k-1_simi0.txt  test-rmse_user-based_k-1_simi0.txt
src/: CF.cpp  CF.h  CMakeLists.txt  CollaborativeFiltering.cpp  InputReader.h  KNN.cpp  KNN.h  StopWatch.h
tests/unit_tests/: CMakeLists.txt  test.cpp
